# AdventOfCode2024

./: .gitignore  Cargo.toml  justfile
daily-template/: Cargo.toml
daily-template/benches/: benchmarks.rs  benchmarks_alloc.rs
daily-template/src/: lib.rs  {{crate_name}}_part1.rs  {{crate_name}}_part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: day_06_part1.rs  day_06_part2.rs  lib.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: day_07_part1.rs  day_07_part2.rs  lib.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: day_08_part1.rs  day_08_part2.rs  lib.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: day_09_part1.rs  day_09_part2.rs  lib.rs
day01/: Cargo.toml
day01/benches/: benchmarks.rs
day01/src/: day01_part1.rs  day01_part2.rs  lib.rs
day02/: Cargo.toml
day02/benches/: benchmarks.rs
day02/src/: day02_part1.rs  day02_part2.rs  lib.rs
day03/: Cargo.toml
day03/benches/: benchmarks.rs
day03/src/: day03_part1.rs  day03_part2.rs  lib.rs
day04/: Cargo.toml
day04/benches/: benchmarks.rs
day04/src/: day04_part1.rs  day04_part2.rs  lib.rs
day05/: Cargo.toml
day05/benches/: benchmarks.rs
day05/src/: day05_part1.rs  day05_part2.rs  lib.rs
day06/: Cargo.toml
day06/benches/: benchmarks.rs
day06/src/: day06_part1.rs  day06_part2.rs  lib.rs
day07/: Cargo.toml
day07/benches/: benchmarks.rs
day07/src/: day07_part1.rs  day07_part2.rs  lib.rs
day08/: Cargo.toml
day08/benches/: benchmarks.rs
day08/src/: day08_part1.rs  day08_part2.rs  lib.rs
day09/: Cargo.toml
day09/benches/: benchmarks.rs
day09/src/: day09_part1.rs  day09_part2.rs  lib.rs
day10/: Cargo.toml
day10/benches/: benchmarks.rs
day10/src/: day10_part1.rs  day10_part2.rs  lib.rs
day11/: Cargo.toml
day11/benches/: benchmarks.rs
day11/src/: day11_part1.rs  day11_part2.rs  lib.rs
day12/: Cargo.toml
day12/benches/: benchmarks.rs
day12/src/: day12_part1.rs  day12_part2.rs  lib.rs
day13/: Cargo.toml
day13/benches/: benchmarks.rs
day13/src/: day13_part1.rs  day13_part2.rs  lib.rs
day14/: Cargo.toml
day14/benches/: benchmarks.rs
day14/src/: day14_part1.rs  day14_part2.rs  lib.rs
day15/: Cargo.toml  input2.txt
day15/benches/: benchmarks.rs
day15/src/: day15_part1.rs  day15_part2.rs  lib.rs
day16/: Cargo.toml
day16/benches/: benchmarks.rs
day16/src/: day16_part1.rs  day16_part2.rs  lib.rs
day17/: Cargo.toml
day17/benches/: benchmarks.rs
day17/src/: day17_part1.rs  day17_part2.rs  lib.rs
day18/: Cargo.toml
day18/benches/: benchmarks.rs
day18/src/: day18_part1.rs  day18_part2.rs  lib.rs
day19/: Cargo.toml
day19/benches/: benchmarks.rs
day19/src/: cache_it_macro.rs  day19_part1.rs  day19_part2.rs  lib.rs
day20/: Cargo.toml
day20/benches/: benchmarks.rs
day20/src/: day20_part1.rs  day20_part2.rs  lib.rs  solve.rs
day21/: Cargo.toml
day21/benches/: benchmarks.rs
day21/src/: cache_it_macro.rs  day21.rs  day21_part1.rs  day21_part2.rs  lib.rs
day22/: Cargo.toml
day22/benches/: benchmarks.rs  benchmarks_alloc.rs
day22/src/: day22_part1.rs  day22_part2.rs  lib.rs
day23/: Cargo.toml
day23/benches/: benchmarks.rs  benchmarks_alloc.rs
day23/src/: day23_part1.rs  day23_part2.rs  lib.rs
day24/: Cargo.toml
day24/benches/: benchmarks.rs  benchmarks_alloc.rs
day24/src/: day24_common.rs  day24_part1.rs  day24_part2.rs  lib.rs
day25/: Cargo.toml
day25/benches/: benchmarks.rs  benchmarks_alloc.rs
day25/src/: day25_part1.rs  lib.rs
grid/: Cargo.toml
grid/src/: grid_array.rs  grid_hashmap.rs  grid_iteration.rs  grid_types.rs  lib.rs
range_set/: Cargo.toml
range_set/src/: lib.rs  merge_state.rs  range_set.rs
utils/: Cargo.toml
utils/src/: lib.rs
