[package]
name = "day03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = { path = "../grid/" }
# utils = { path = "../utils" }
# aoc = { path = "../aoc" }
# range_set = { path = "../range_set/" }

itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
dhat = { workspace = true }

num-traits = { workspace = true }
rayon = { workspace = true }
fxhash = { workspace = true }

# nom = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day03-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
