[package]
name = "grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder.workspace = true
derive_more.workspace = true
itertools.workspace = true
fxhash.workspace = true
gif.workspace = true

