[package]
name = "range_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
derive_more = { workspace = true }

itertools = { workspace = true }

fxhash = { workspace = true }

num-traits = { workspace = true }

[dependencies.binary-merge]
version = "0.1.1"

[dependencies.bytecheck]
version = "0.7"
optional = true

[dependencies.inplace-vec-builder]
version = "0.1.0"
features = ["smallvec"]
default-features = false

[dependencies.ref-cast]
version = "1.0.20"

[dependencies.rkyv]
version = "0.7.18"
optional = true

[dependencies.serde]
version = "1"
optional = true
default-features = false

[dependencies.smallvec]
version = "1.0"

[dev-dependencies.criterion]
version = "0.5"

[dev-dependencies.hex]
version = "0.4.3"

[dev-dependencies.obey]
version = "0.1.1"

[dev-dependencies.proptest]
version = "1.1.0"

[dev-dependencies.quickcheck]
version = "1.0"

[dev-dependencies.quickcheck_macros]
version = "1.0"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.rkyv]
version = "0.7.18"
features = ["validation"]

[dev-dependencies.serde_cbor]
version = "0.11.1"

[dev-dependencies.testdrop]
version = "0.1.2"

[features]
default = []
new_unchecked = []
rkyv_validated = [
    "rkyv",
    "bytecheck",
]
